add basic html structure and add div classes.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
- 
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+   <script src="js/jquery-3.4.1.js"></script>
+   <script src="js/scripts.js"></script>
+   <link rel="stylesheet" href="css/bootstrap.css">
+   <link rel="stylesheet" href="css/styles.css">
+   <title>Stress Test</title>
+ </head>
+ <body>
+   <div class="container">
+     <div class="jumbotron">
+    <h1>Unstress test</h1>
+    <p>Are you stressed out? Don't know what to do? Well neither do I, you've come to the wrong place. Since you're here why not take this pointless stress test developed by non-pysch students that means nothing.</p>
+    <blockquote>
+      <p>Just chill bruh!</p>
+      <footer><em>Oprah Winfrey or Buddha</em></footer>
+    </blockquote>
+     </div>
+    <form id="stressTest">
+    <div class="form-group">
+      <p></p>
+      </form>
+    </div>
+  </div>  
+ </body>
+ </html>
