--- a/index.html
+++ b/index.html
@@ -21,39 +21,39 @@
     <div class="form-group">
       <!-- Below will be warning signs checkboxes -->
       <p>Are you experiencecing any of the following warning signs? (Click all that apply/if any)</p>
-      <input type="checkbox" name="stress-test" value="sleep">Loss of sleep<br>
-      <input type="checkbox" name="stress-test" value="overwhelmed">Feeling overwhelmed<br>
-      <input type="checkbox" name="stress-test" value="gain">Weight gain<br>
-      <input type="checkbox" name="stress-test" value="loss">Loss of appetite<br>
+      <input type="checkbox" name="warning" value="1"> Loss of sleep </input>
+      <br>
+      <input type="checkbox" name="warning" value="1"> Feeling overwhelmed </input>
+      <br>
+      <input type="checkbox" name="warning" value="1"> Weight gain </input>
+      <br>
+      <input type="checkbox" name="warning" value="1"> Loss of appetite </input><br>
       <!-- Below will be Health symptoms checkboxes -->     
     </br>
       <p>Are you experiencecing any of the following health symptoms? (Click all that apply/if any)</p>
-      <input type="checkbox" name="stress-test" value="anxiety"> Anxiety<br>
-      <input type="checkbox" name="stress-test" value="blood">High blood pressure<br>
-      <input type="checkbox" name="stress-test" value="head">Headaches<br>
-      <input type="checkbox" name="stress-test" value="chest">Chest pain<br>
+      <input type="checkbox" name="symptoms" value="1"> Anxiety </input>
+      <br>
+      <input type="checkbox" name="symptoms" value="2"> High blood pressure </input>
+      <br>
+      <input type="checkbox" name="symptoms" value="3"> Headaches </input>
+      <br>
+      <input type="checkbox" name="symptoms" value="4"> Chest pain </input>
       <!-- Below will be coping mechanisms checkboxes -->
     </br>
       <p>Which of the following coping mechanisms have you tried? (Click all that apply/if any)</p>
-      <input type="checkbox" name="stress-test" value="med">Meditation<br>
-      <input type="checkbox" name="stress-test" value="tiger">Pet a mini tiger<br>
-      <input type="checkbox" name="stress-test" value="work-out">Excercise<br>
-      <input type="checkbox" name="stress-test" value="model">Build a model airplane<br>
+      <input type="checkbox" name="mechanisms" value="1"> Meditation </input>
+      <br>
+      <input type="checkbox" name="mechanisms" value="2"> Pet a mini tiger </input>
+      <br>
+      <input type="checkbox" name="mechanisms" value="3"> Excercise</input>
+      <br>
+      <input type="checkbox" name="mechanisms" value="4"> Build a model airplane</input>
       <!-- Button will go below -->
       </br>
-      <button type="submit" class=" btn btn-success">Don't let how big this button is stress you out, just submit.</button>
+      <button type="submit" class=" btn btn-info" id="big-button">Don't let how big this button is stress you out, just submit.</button>
     </div>
     </form>
-    <span id="warning">
-    
-    </span>
-    <br>
-    <span id="symptoms">
-
-    </span>
-    <br>
-    <span id="coping">
-      
+    <span id="output">
     </span>
   </div>  
  </body>
